--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
-# Core ML/DL frameworks
+# nanoNAS: Minimal Neural Architecture Search
+# Essential dependencies only
+
 torch>=2.0.0
+numpy>=1.21.0
+matplotlib>=3.5.0
+seaborn>=0.11.0
+
+# Core ML/DL frameworks
 torchvision>=0.15.0
 tensorflow>=2.13.0
 jax>=0.4.0
@@ -14,15 +21,12 @@ deap>=1.3.3
 pymoo>=0.6.0
 
 # Data processing
-numpy>=1.24.0
 pandas>=2.0.0
 scipy>=1.10.0
 scikit-learn>=1.3.0
 datasets>=2.13.0
 
 # Visualization and monitoring
-matplotlib>=3.7.0
-seaborn>=0.12.0
 plotly>=5.15.0
 wandb>=0.15.0
 tensorboard>=2.13.0
