--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,7 @@
-# nanoNAS: Minimal Neural Architecture Search
-# Essential dependencies only
+# nanoNAS: Essential Dependencies Only
+# Ultra-minimal Neural Architecture Search
 
 torch>=2.0.0
 numpy>=1.21.0
 matplotlib>=3.5.0
-seaborn>=0.11.0
-
-# Core ML/DL frameworks
-torchvision>=0.15.0
-tensorflow>=2.13.0
-jax>=0.4.0
-jaxlib>=0.4.0
-
-# Optimization and search
-optuna>=3.2.0
-ray[tune]>=2.5.0
-hyperopt>=0.2.7
-scikit-optimize>=0.9.0
-deap>=1.3.3
-pymoo>=0.6.0
-
-# Data processing
-pandas>=2.0.0
-scipy>=1.10.0
-scikit-learn>=1.3.0
-datasets>=2.13.0
-
-# Visualization and monitoring
-plotly>=5.15.0
-wandb>=0.15.0
-tensorboard>=2.13.0
-
-# Code generation and compilation
-jinja2>=3.1.0
-black>=23.0.0
-autopep8>=2.0.0
-astunparse>=1.6.0
-
-# Performance and profiling
-memory-profiler>=0.60.0
-pynvml>=11.5.0
-psutil>=5.9.0
-
-# Utilities
-tqdm>=4.65.0
-rich>=13.0.0
-click>=8.1.0
-pyyaml>=6.0
-jsonschema>=4.17.0
-requests>=2.31.0
-
-# Testing
-pytest>=7.4.0
-pytest-cov>=4.1.0 
+seaborn>=0.11.0 
