--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
-# Python Cache and Build Files
+# =============================================================================
+# nanoNAS .gitignore
+# =============================================================================
+
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
+
+# C extensions
 *.so
+
+# Distribution / packaging
 .Python
 build/
 develop-eggs/
@@ -16,14 +24,68 @@ parts/
 sdist/
 var/
 wheels/
-pip-wheel-metadata/
-share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
 MANIFEST
 
-# Virtual environments
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# pyenv
+.python-version
+
+# celery beat schedule file
+celerybeat-schedule
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
 .env
 .venv
 env/
@@ -32,65 +94,188 @@ ENV/
 env.bak/
 venv.bak/
 
-# IDEs
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# =============================================================================
+# Machine Learning / PyTorch specific
+# =============================================================================
+
+# Model checkpoints
+*.pth
+*.pt
+*.ckpt
+*.h5
+*.pb
+*.onnx
+
+# Datasets (large files)
+datasets/
+data/
+*.csv
+*.json
+*.npz
+*.npy
+*.pkl
+*.pickle
+
+# Experiment results
+results/
+outputs/
+runs/
+logs/
+wandb/
+tensorboard_logs/
+mlruns/
+
+# Cache directories
+.cache/
+__pycache__/
+.pytest_cache/
+
+# =============================================================================
+# nanoNAS specific
+# =============================================================================
+
+# Experiment outputs
+experiments/
+benchmarks/
+architecture_cache/
+search_results/
+
+# Visualization outputs
+plots/
+figures/
+visualizations/
+
+# Configuration overrides
+local_config.yaml
+user_config.yaml
+*.local.yaml
+
+# Temporary files
+temp/
+tmp/
+*.tmp
+
+# =============================================================================
+# IDE and Editor files
+# =============================================================================
+
+# VSCode
 .vscode/
+*.code-workspace
+
+# PyCharm
 .idea/
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# Vim
 *.swp
 *.swo
 *~
 
-# Jupyter Notebook checkpoints
-.ipynb_checkpoints
+# Emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
 
-# Temporary and cache files
-*.tmp
-*.temp
-.cache/
-.pytest_cache/
-.mypy_cache/
-.dmypy.json
-dmypy.json
-htmlcov/
-.coverage
-.coverage.*
-coverage.xml
+# =============================================================================
+# OS specific
+# =============================================================================
 
-# OS files
+# macOS
 .DS_Store
-.DS_Store?
+.AppleDouble
+.LSOverride
+Icon?
 ._*
 .Spotlight-V100
 .Trashes
-ehthumbs.db
+
+# Windows
 Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+*.lnk
 
-# Large datasets and files
-data/large_datasets/
-datasets/imagenet/
-datasets/cifar100/
-data/cifar-10-batches-py/
-data/cifar10/
-data/raw/
-*.tar.gz
-*.pkl.gz
-*.zip
-data/**/*.tar.gz
-data/**/*.pkl
-data/cifar-10-python.tar.gz
-data/examples/large_cifar.pkl
-data/examples/imagenet_style.pkl
+# Linux
+*~
+.directory
 
-# Large model files (over 100MB)
-*.pth.tar
-models/large/
-checkpoints/large/
-checkpoints/**/*.pth
-results/**/*.pth
+# =============================================================================
+# Docker
+# =============================================================================
 
-# Remove these lines to include research artifacts:
-# *.pth - Allow model checkpoints
-# *.pt - Allow PyTorch models  
-# experiments/ - Allow experimental results
-# checkpoints/ - Allow saved models
-# logs/ - Allow training logs
-# results/ - Allow research results 
+# Docker
+.dockerignore
+
+# =============================================================================
+# Profiling
+# =============================================================================
+
+# Profiling
+*.prof
+*.profile
+profile.stats
+
+# =============================================================================
+# Security
+# =============================================================================
+
+# API keys and secrets
+.env
+.secrets
+config/secrets.yaml
+api_keys.txt
+credentials.json
+
+# SSL certificates
+*.pem
+*.key
+*.crt
+
+# =============================================================================
+# Backup files
+# =============================================================================
+
+*.bak
+*.backup
+*.old
+*.orig
+
+# =============================================================================
+# Large files that should be tracked with Git LFS
+# =============================================================================
+
+# Pre-trained models (use Git LFS)
+# *.pth
+# *.pt
+# *.h5
+# *.pb
+
+# Large datasets (use Git LFS)
+# *.csv
+# *.json
+# *.npz
