--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,44 @@
-# nanoNAS: Essential Dependencies Only
-# Ultra-minimal Neural Architecture Search
+# nanoNAS: Neural Architecture Search Made Simple
+# Graduate-Level AutoML/NAS Project Dependencies
 
+# Core ML/DL Framework
 torch>=2.0.0
+torchvision>=0.15.0
 numpy>=1.21.0
-matplotlib>=3.5.0
-seaborn>=0.11.0 
+
+# Visualization and Plotting
+matplotlib>=3.6.0
+seaborn>=0.12.0
+plotly>=5.11.0
+tensorboard>=2.10.0
+
+# Network Analysis and Visualization
+networkx>=2.8.0
+graphviz>=0.20.0
+
+# Configuration and Data Handling
+pyyaml>=6.0.0
+omegaconf>=2.3.0
+pandas>=1.5.0
+
+# Model Analysis and Benchmarking
+thop>=0.1.0  # FLOPs counting
+timm>=0.6.0  # Pre-trained models for comparison
+fvcore>=0.1.5  # Additional model analysis
+
+# Progress Tracking and Logging
+tqdm>=4.64.0
+wandb>=0.13.0  # Experiment tracking (optional)
+
+# Scientific Computing
+scipy>=1.9.0
+scikit-learn>=1.1.0
+
+# Development and Testing (optional)
+pytest>=7.0.0
+black>=22.0.0
+flake8>=5.0.0
+
+# Documentation (optional)
+mkdocs>=1.4.0
+mkdocs-material>=8.5.0 
