--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,47 @@ wandb>=0.13.0  # Experiment tracking (optional)
 scipy>=1.9.0
 scikit-learn>=1.1.0
 
+# Hardware Profiling and Monitoring
+psutil>=5.9.0  # System monitoring
+pynvml>=11.4.1  # NVIDIA GPU monitoring (optional)
+
+# Model Optimization and Deployment
+onnx>=1.12.0  # ONNX model format
+onnxruntime>=1.12.0  # ONNX inference runtime
+onnxoptimizer>=0.3.0  # ONNX model optimization
+
+# Production Serving
+aiohttp>=3.8.0  # Async HTTP server
+asyncio-mqtt>=0.11.0  # Async MQTT client (optional)
+
+# Multi-objective Optimization
+pymoo>=0.6.0  # Multi-objective optimization algorithms
+deap>=1.3.0  # Evolutionary algorithms
+
+# Advanced Training
+transformers>=4.21.0  # For attention mechanisms (optional)
+
+# Bayesian Optimization
+scikit-optimize>=0.9.0  # Gaussian process optimization
+GPy>=1.10.0  # Gaussian process library (optional)
+
+# Code Generation and Deployment
+jax>=0.4.0  # JAX framework (optional)
+jaxlib>=0.4.0  # JAX library (optional)
+tensorflow>=2.10.0  # TensorFlow (optional)
+tensorflowjs>=4.0.0  # TensorFlow.js (optional)
+fastapi>=0.85.0  # FastAPI for model serving
+uvicorn>=0.18.0  # ASGI server
+torchserve>=0.6.0  # TorchServe (optional)
+
+# Advanced Analysis
+optuna>=3.0.0  # Hyperparameter optimization
+ray[tune]>=2.0.0  # Distributed hyperparameter tuning (optional)
+networkx>=2.8.0  # Already included above but ensuring version
+
+# Command Line Interface
+click>=8.0.0  # CLI framework
+
 # Development and Testing (optional)
 pytest>=7.0.0
 black>=22.0.0
@@ -41,4 +82,11 @@ flake8>=5.0.0
 
 # Documentation (optional)
 mkdocs>=1.4.0
-mkdocs-material>=8.5.0 
+mkdocs-material>=8.5.0
+
+# Cloud Deployment (optional)
+kubernetes>=24.2.0  # Kubernetes Python client
+docker>=6.0.0  # Docker Python SDK
+boto3>=1.26.0  # AWS SDK (optional)
+google-cloud-storage>=2.7.0  # GCP SDK (optional)
+azure-storage-blob>=12.14.0  # Azure SDK (optional) 
