--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,46 @@
 # nanoNAS: Neural Architecture Search Made Simple
 # Graduate-Level AutoML/NAS Project Dependencies
 
-# Core ML/DL Framework
-torch>=2.0.0
-torchvision>=0.15.0
-numpy>=1.21.0
+# Core dependencies
+torch>=1.12.0
+torchvision>=0.13.0
+numpy>=1.20.0
+
+# Configuration and data handling
+pyyaml>=6.0
+dataclasses-json>=0.5.7
+
+# Visualization and analysis
+matplotlib>=3.5.0
+networkx>=2.8.0
+plotly>=5.10.0
+pandas>=1.4.0
+tabulate>=0.9.0
+
+# Development and testing
+pytest>=7.0.0
+pytest-cov>=4.0.0
+black>=22.0.0
+mypy>=0.950
+flake8>=5.0.0
+
+# Optional enhanced features
+scipy>=1.8.0  # For advanced optimization
+seaborn>=0.11.0  # Enhanced plotting
+tensorboard>=2.9.0  # Training visualization
+gpustat>=1.1.0  # GPU monitoring
+
+# System utilities
+psutil>=5.9.0  # System monitoring
+tqdm>=4.64.0  # Progress bars
 
 # Visualization and Plotting
-matplotlib>=3.6.0
 seaborn>=0.12.0
 plotly>=5.11.0
 tensorboard>=2.10.0
 
 # Network Analysis and Visualization
-networkx>=2.8.0
 graphviz>=0.20.0
-
-# Configuration and Data Handling
-pyyaml>=6.0.0
-omegaconf>=2.3.0
-pandas>=1.5.0
 
 # Model Analysis and Benchmarking
 thop>=0.1.0  # FLOPs counting
@@ -27,15 +48,12 @@ timm>=0.6.0  # Pre-trained models for comparison
 fvcore>=0.1.5  # Additional model analysis
 
 # Progress Tracking and Logging
-tqdm>=4.64.0
 wandb>=0.13.0  # Experiment tracking (optional)
 
 # Scientific Computing
-scipy>=1.9.0
 scikit-learn>=1.1.0
 
 # Hardware Profiling and Monitoring
-psutil>=5.9.0  # System monitoring
 pynvml>=11.4.1  # NVIDIA GPU monitoring (optional)
 
 # Model Optimization and Deployment
@@ -70,15 +88,9 @@ torchserve>=0.6.0  # TorchServe (optional)
 # Advanced Analysis
 optuna>=3.0.0  # Hyperparameter optimization
 ray[tune]>=2.0.0  # Distributed hyperparameter tuning (optional)
-networkx>=2.8.0  # Already included above but ensuring version
 
 # Command Line Interface
 click>=8.0.0  # CLI framework
-
-# Development and Testing (optional)
-pytest>=7.0.0
-black>=22.0.0
-flake8>=5.0.0
 
 # Documentation (optional)
 mkdocs>=1.4.0
